# Computer-Vision

./: .gitignore  Doxyfile  README.md
Consegne/Di_Nardo_Di_Maio_Raffaele_1204879/: CMakeLists.txt
Consegne/Di_Nardo_Di_Maio_Raffaele_1204879/include/: PanoramicUtils.h
Consegne/Di_Nardo_Di_Maio_Raffaele_1204879/src/: Lab5.cpp  PanoramicImage.cpp
HelloWorld/: CMakeLists.txt  README.md  README.txt
HelloWorld/HelloWorld/: HelloWorld.cpp  Source.cpp
HelloWorld/include/: HelloWorld.h  Test.h
HelloWorld/src/: HelloWorld.cpp  Test.cpp
Lab1/: CMakeLists.txt  Lab1.sln
Lab1/Lab1/: ColorChange.cpp  Lab1.cpp  Lab1.h  Lab1.vcxproj  Lab1.vcxproj.filters
Lab1/include/: ColorChange.h  Lab1.h
Lab1/src/: ColorChange.cpp  Lab1.cpp
Lab2/: CMakeLists.txt  Lab2.sln
Lab2/Lab2/: Lab2.vcxproj
Lab2/Lab2/Debug/: vc142.idb
Lab2/Lab2/Debug/Lab2.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Lab2.lastbuildstate
Lab2/Lab2/x64/Debug/: vc142.idb
Lab2/Lab2/x64/Debug/Lab2.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Lab2.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Lab2/include/: Calibration.h  Lab2.h
Lab2/src/: Calibration.cpp  Lab2.cpp
Lab2/x64/Debug/: Lab2.ilk
Lab3/: CMakeLists.txt  Lab3.sln
Lab3/Lab3/: Histogram.cpp  Histogram.h  Lab3.cpp  Lab3.h  Lab3.vcxproj  Lab3.vcxproj.filters
Lab3/include/: Filter.h  Histogram.h  Lab3.h
Lab3/src/: Filter.cpp  Histogram.cpp  Lab3.cpp
Lab4/: CMakeLists.txt
Lab4/doc/html/: _canny_detector_8h.html  _canny_detector_8h_source.html  _hough_circles_detector_8h.html  _hough_circles_detector_8h_source.html  _hough_lines_detector_8h.html  _hough_lines_detector_8h_source.html  _lab4_8h.html  _lab4_8h_source.html  _street_detector_8h.html  _street_detector_8h_source.html  annotated.html  class_canny_detector-members.html  class_canny_detector.html  class_hough_circles_detector-members.html  class_hough_circles_detector.html  class_hough_lines_detector-members.html  class_hough_lines_detector.html  class_street_signal_detector-members.html  class_street_signal_detector.html  classes.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  functions.html  functions_func.html  menudata.js
Lab4/doc/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  classes_0.js  classes_1.js  classes_2.js  files_0.js  files_1.js  files_2.js  files_3.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  searchdata.js
Lab4/include/: CannyDetector.h  HoughCirclesDetector.h  HoughLinesDetector.h  HoughTransform.h  Lab4.h  StreetDetector.h
Lab4/src/: CannyDetector.cpp  HoughCirclesDetector.cpp  HoughLinesDetector.cpp  HoughTransform.cpp  Lab4.cpp  StreetDetector.cpp
Lab5/: CMakeLists.txt  Doxyfile
Lab6/: CMakeLists.txt  README.txt
Lab7/: DeepLearning.ipynb
Project/: CMakeLists.txt  Doxyfile  can_results.txt  duck_results.txt
Project/dat/: can_results.txt  driller_results.txt
Project/include/: BestResults.hpp  CannyDetector.hpp  GammaTransform.hpp  Menu.hpp  Project.hpp  TemplateMatching.hpp  TreeDetection.h  Utility.hpp
Project/src/: BestResults.cpp  CannyDetector.cpp  GammaTransform.cpp  Menu.cpp  Project.cpp  TemplateMatching.cpp  TreeDetection.cpp
SpatialOperations/: CMakeLists.txt  Doxyfile  SpatialOperations.sln
(+60 files in other folders)
